# glint-renderer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
assets/images/: brick.asset  dirt.asset  stainless-steel.asset
assets/images/F1Car/: F1CarDiffuse.asset  F1CarSpecular.asset
assets/images/skybox/: yellowcloud.asset  yellowcloud_bk.asset  yellowcloud_dn.asset  yellowcloud_ft.asset  yellowcloud_lf.asset  yellowcloud_rt.asset  yellowcloud_up.asset
assets/models/: F1Car.asset  F1Car.mtl
src/: main.cpp
src/App/: Camera.cpp  Camera.h  Window.cpp  Window.h
src/Asset/: Asset.h  Constants.h  Manager.h
src/Asset/Type/: Image.h  Model.h  Skybox.h
src/GL/: Mesh.cpp  Mesh.h  Object.cpp  Object.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/GL/Buffer/: BufferObject.cpp  BufferObject.h  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Renderer/: Camera.cpp  Camera.h  Constants.h  Context.cpp  Context.h  Map.cpp  Map.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OmniShadowMap.cpp  OmniShadowMap.h  Scene.cpp  Scene.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h
src/Renderer/GL/: Object.cpp  Object.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/Renderer/GL/Buffer/: BufferObject.cpp  BufferObject.h  EBO.cpp  EBO.h  FBO.cpp  FBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Renderer/GL/Shader/: Program.cpp  Program.h
src/Renderer/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Renderer/Pipeline/: IPass.h  Pipeline.cpp  Pipeline.h
src/Renderer/Pipeline/Pass/: ClearPass.cpp  ClearPass.h  DebugDirectionalShadowMapPass.cpp  DebugDirectionalShadowMapPass.h  ScenePass.cpp  ScenePass.h  ShadowMapPass.cpp  ShadowMapPass.h  SkyboxPass.cpp  SkyboxPass.h
src/Renderer/shaders/: basic-material.frag.glsl  basic-material.vert.glsl  debug-quad.frag.glsl  debug-quad.vert.glsl  directional-shadow-map.vert.glsl  omnidirectional-shadow-map.frag.glsl  omnidirectional-shadow-map.geom.glsl  skybox.frag.glsl  skybox.vert.glsl
src/Util/: File.cpp  File.h  GL.cpp  GL.h  Math.h  Random.h
src/World/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h
src/shaders/: basic-material.frag.glsl  basic-material.vert.glsl  tri.frag.glsl  tri.vert.glsl
